@@ -82,7 +82,7 @@ Nevertheless, and just in case, we are providing this guide :-).
 System Requirements
 *******************
 
-To run `ViTables` you need to install recent versions of `Python3`, `PyTables` (so you have to fulfil its own requirements) and `PyQt`. For instance, it runs smoothly with `Python` 3.6, `PyTables` 3.4 and `PyQt` 5.8.
+To run `ViTables` you need to install recent versions of `Python3`, `PyTables` (so you have to fulfil its own requirements) and `PyQt`. For instance, it runs smoothly with `Python` 3.11, `PyTables` 3.8 and `PyQt` 6.5.
 
 At the moment, `ViTables` has been fully tested on Linux and Windows 10 platforms. Other Unices should run just fine when using the Linux version because all the software that `ViTables` relies on (i.e. `Python`, `Qt`, `PyQt`, `HDF5` and `PyTables`) is known to run fine on many Unix platforms as well.
 
