@@ -17,7 +17,7 @@
 #
 #       Author:  Vicent Mas - vmas@vitables.org
 
-__version__ = '3.0.2'
+__version__ = '3.0.3'
 __all__ = ["docbrowser", "h5db", "logger", "nodeprops", "plugins",
            "queries", "preferences", "vttables", "vtwidgets",
            "utils", "vtsite", "vtapp", "vtgui", "vtsplash"]
